# ensemble_genetic_algorithm

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  HFE_GA_v19.4.ipynb  LICENSE  README.md  _a_F_F_u_T_a_m_10_1_0_90_.9_.25_.2_.025_9111111111111110656HFE_GA_Grid_best_pop=4_g=2_nb=4.pkl  _a_F_F_u_T_a_m_10_1_0_99.9_.9_.25_.2_.025_6111111111011110912HFE_GA_Grid_best_pop=4_g=2_nb=4.pkl  _a_F_F_u_T_a_m_10_1_0_99.9_.9_.25_.8_.025_3111111111011110912HFE_GA_Grid_best_pop=4_g=2_nb=4.pkl  _d_F_F_u_T_a_m_10_1_0_90_.99_.25_.4_.025_6111111111111110656HFE_GA_Grid_best_pop=4_g=2_nb=4.pkl  _d_F_F_u_T_a_m_10_1_0_95_.99_.25_.4_.05_9111111111011110912HFE_GA_Grid_best_pop=4_g=2_nb=4.pkl  _d_F_F_u_T_a_m_10_1_0_99.9_.99_.75_.8_.025_6111111111011110912HFE_GA_Grid_best_pop=4_g=2_nb=4.pkl  _u_F_F_u_T_a_m_10_1_0_95_.99_.25_.2_.05_6111111111111110656HFE_GA_Grid_best_pop=4_g=2_nb=4.pkl  _u_F_F_u_T_a_m_10_1_0_95_.9_.5_.2_.075_6111111111111110656HFE_GA_Grid_best_pop=4_g=2_nb=4.pkl  _u_F_F_u_T_a_m_10_1_0_99.9_.99_.75_.4_.025_9111111111011110912HFE_GA_Grid_best_pop=4_g=2_nb=4.pkl  config.yml.example  docs.yml  grid_score_reader_GA_v2.2 (1).ipynb  install.bat  install.sh  main.py  packages.txt  pyproject.toml  pytest.ini  requirements.txt  setup.sh
.ai/: claude.prompt.md  codex.prompt.md  gemini.prompt.md  guidelines.md  overview.md
.githooks/: pre-push
.github/workflows/: docs.yml  notebook-test.yml
assets/: example_usage_permutations.mmd  ga_ann_weight_methods.mmd  ga_data_diagram.mmd  ga_weighting.mmd  grid_param_space_ga.mmd  main_py_workflow.mmd  model_classes.mmd  svc_model_gen.mmd  torch_model_gen.mmd  xgb_model_gen.mmd
docs/source/: Home.md  adding_new_learner.rst  architecture.rst  best_practices.rst  conclusion.rst  conf.py  configuration_guide.rst  contributing.rst  data_preparation.rst  diagrams.rst  docs.yml  evaluating_models.rst  example_notebook.rst  ga_deep_dive.rst  hyperparameter_reference.rst  index.rst  installation.rst  interpreting_results.rst  ml_grid.rst  modules.rst  project_structure.rst  troubleshooting.rst  usage.rst
docs/source/docs_wiki/: Adding_a_New_Base_Learner.md  Architectural_Overview.md  Best_Practices.md  Configuration_Guide.md  Contributing.md  Data_Preparation_Guide.md  Deployment.md  Diagrams.md  Evaluating_Final_Models.md  Example_Usage_Notebook.md  FAQ.md  Genetic_Algorithm_Deep_Dive.md  Home.md  Hyperparameter_Reference.md  Installation.md  Interpreting_Results.md  License.md  Project-Dataset-Requirements.md  Project-Structure.md  Technical-Deep-Dive.md  Troubleshooting.md  Usage.md
github/workflows/: notebook-test.yml
legacy/: HFE_GA_v19.4.ipynb  grid_score_reader_GA_v2.2 (1).ipynb  grid_score_reader_ML_Grid_V_1.6.ipynb
ml_grid/: __init__.py
ml_grid (2)/ga_functions/: ga_de_weight_method.py
ml_grid (2)/pipeline/: ensemble_generator_ga.py  evaluate_methods_ga.py  mutate_methods.py
ml_grid (2)/pipeline/plot_methods/: plot_auc_ga.py
ml_grid (2)/pipeline/weighting_methods_ga.py/: get_y_pred_unweighted.py
ml_grid (2)/tests/: HFE_GA_v19.4.ipynb
ml_grid (2)/util/: global_params.py  grid_param_space.py  grid_param_space_ga.py  model_methods_ga.py
ml_grid/ga_functions/: ga_ann_util.py  ga_ann_weight_methods.py  ga_de_weight_method.py  ga_ensemble_weight_finder_de.py  ga_eval_ann_weight_method.py  ga_eval_de_weight_method.py  ga_eval_ensemble_weight_finder_de.py  ga_eval_unweighted.py  ga_unweighted.py
ml_grid/ga_functions/ga_plots/: ga_progress.py
ml_grid/model_classes/: logistic_regression_class.py
ml_grid/model_classes_ga/: XGBoost_model.py  adaboostClassifier_model.py  decisionTreeClassifier_model.py  dummy_model.py  elasticNeuralNetwork_model.py  extra_trees_model.py  gaussianNB_model.py  gradientBoostingClassifier_model.py  kNearestNeighbors_model.py  logistic_regression_model.py  mlpClassifier_model.py  perceptron_dummy_model.py  perceptron_model.py  pytorchANNBinaryClassifier_model.py  quadraticDiscriminantAnalysis_model.py  randomForest_model.py  svc_model.py
ml_grid/pipeline/: column_names.py  data.py  data_clean_up.py  data_constant_columns.py  data_correlation_matrix.py  data_feature_importance_methods.py  data_feature_methods.py  data_outcome_list.py  data_percent_missing.py  data_plot_split.py  data_scale.py  data_train_test_split.py  ensemble_generator_ga.py  evaluate_methods_ga.py  evaluate_methods_y_pred_resolver.py  get_feature_selection_class_ga.py  grid_search_cross_validate.py  logs_project_folder.py  main.py  main_ga.py  mutate_methods.py  project_score_save.py  read_in.py  torch_binary_classification_method_ga.py
ml_grid/pipeline/logging/: project_score_save_ga.py
ml_grid/pipeline/plot_methods/: plot_auc_ga.py
ml_grid/pipeline/weighting_methods_ga.py/: ensemble_weight_finder_de.py  get_y_pred_ann_torch.py  get_y_pred_ensemble_de.py  get_y_pred_unweighted.py
ml_grid/tests/: HFE_GA_v19.4.ipynb  example_usage.ipynb  grid_score_reader_ML_Grid_V_1.6.ipynb
ml_grid/util/: GA_results_explorer.py  config.py  debug_methods_ga.py  debug_print_statements.py  ensemble_classifier.py  ensemble_diversity_methods.py  evaluate_ensemble_methods.py  get_feature_selection_class_ga.py  global_params.py  grid_param_space.py  grid_param_space_ga.py  logger_setup.py  manually_removed_list.py  model_methods_ga.py  outcome_list.py  param_space.py  project_score_save.py  synthetic_data_generator.py  test_ensemble_classifier.py  validate_param_methods.py
notebooks/: config.yml  example_usage.ipynb  post_hoc_evaluation.ipynb  synthetic_sample_100_features_4_anonymized.csv  test_notebook.py
tests/: test_column_names.py  test_config.py  test_data_clean_up_data_handle_duplicated_columns.py  test_data_clean_up_handle_column_names.py  test_data_correlation_matrix_handle.py  test_data_pipeline.py  test_data_test_feature_methods.py  test_data_train_test_split.py  test_ensemble_diversity_methods.py  test_ga_ann_util.py  test_logger_setup.py  test_markov_blanket_feature_reduction.py  test_measure_binary_vector_diversity_metric.py  test_predict_fallback.py  test_project_score_save.py
