[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ensemble-genetic-algorithm"
version = "0.1.0"
description = "A project for ensemble methods using genetic algorithms."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Samora Hunter", email = "samorahunter@hotmail.co.uk" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "deap",
    "eventlet",
    "fsspec",
    "fuzzysearch",
    "graphviz",
    "imbalanced-learn",
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "numpy<2",
    "pandas",
    "polars",
    "pydot",
    "pyimpetus",
    "scikit-learn",
    "scipy",
    "scoop",
    "seaborn",
    "statsmodels",
    "tabulate",
    "torchmetrics",
    "xgboost",
    "pyarrow",
    "tqdm",
    "PyYAML",
]

[project.urls]
Homepage = "https://github.com/SamoraHunter/ensemble_genetic_algorithm"
Documentation = "https://ensemble-genetic-algorithm.readthedocs.io/en/latest/"
Repository = "https://github.com/SamoraHunter/ensemble_genetic_algorithm"

# Dependencies for development, testing, and code quality
[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "nbformat", 
    "session-info",
    "nbconvert", 
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-autodoc-typehints",
]

# Dependencies for GPU support (e.g., CUDA-enabled libraries)
gpu = [
    # Torch should be installed manually following instructions from pytorch.org
]

# 'all' combines dev and gpu dependencies
all = [
    "ensemble-genetic-algorithm[dev,gpu]",
]

[tool.setuptools]
# Explicitly tell setuptools which directory contains the package source code.
packages = ["ml_grid"]